--- a/az_app_variables/src/az_app_variables_init_macro/az_app_variables_init_macro_derive/Cargo.toml
+++ b/az_app_variables/src/az_app_variables_init_macro/az_app_variables_init_macro_derive/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
-name = "app_variables_new_macro"
+name = "az_app_variables_init_macro_derive"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+proc-macro = true
+
 [dependencies]
+syn = "1.0"
+quote = "1.0"
