--- a/az_app_secrets/src/az_app_secrets_init_macro/Cargo.toml
+++ b/az_app_secrets/src/az_app_secrets_init_macro/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-trait = "0.1.64"
-azure_identity                  = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust" }
+async-trait = "0.1"
+azure_identity                  = { version = "0.10.0", git = "https://github.com/Azure/azure-sdk-for-rust", tag = "v2023-02-15" }
